# commandcentral

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: help.md  plan.md  review.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
docs/: MASTER-PLAN.md  commandcenter-evolution.md  unbuilt-features-inventory.md
docs/architecture/: CC4-SESSION-PROMPT.md  CRITICAL-microservices-split-issue.md  ai-arena-gaps-and-fixes.md  frontend-build-status.md  pipelzr-enhancement-plan.md  product-vision-clarity.md  skills-as-knowledge.md  skills-knowledge-distribution.md
docs/handoffs/: cc4-transition-2026-01-31.md  commandcentral-frontend-build.md  wildvine-session-2026-01-31.md
docs/plans/: master-plan.md
docs/self/: api-reference.md  patterns.md
idealzr/: .env.example  README.md  pyproject.toml  requirements.txt
idealzr/app/: __init__.py  config.py  database.py  main.py
idealzr/app/middleware/: __init__.py  correlation.py  logging.py  metrics.py
idealzr/app/models/: __init__.py  evidence.py  goal.py  hypothesis.py  idea.py  memory.py  venture.py
idealzr/app/routers/: __init__.py  evidence.py  forecasts.py  goals.py  health.py  hypotheses.py  ideas.py  memory.py  ventures.py
idealzr/app/schemas/: __init__.py
idealzr/app/services/: __init__.py  evidence_service.py  forecast_service.py  goals_service.py  hypothesis_service.py
pipelzr/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: index_skills_to_cc4.py
skills/: INDEX.md  MANIFEST.yaml
vislzr/: .env.example  README.md  pyproject.toml  requirements.txt
(+118 files in other folders)
